# lamas

./: .gitignore  README.md  requirements.txt
marft/: QUICK_START.md  TRAINING_GUIDE.md  config.py  pyproject.toml  requirements.txt  requirements_qwen.txt  run_qwen_example.sh  run_qwen_training.sh  test_bigcodebench_loading.py
marft/algorithms/: __init__.py  appo_trainer.py  tppo_trainer.py
marft/buffers/: __init__.py
marft/configs/: qwen_coding_config.yaml
marft/critics/: __init__.py
marft/data/: bigcodebench_instruct_test_marft.json
marft/envs/: __init__.py
marft/envs/coding/: coding_env.py  convert_bigcodebench.py  example_usage.py  test.json  train.json
marft/envs/math/: math.py  math_env.py
marft/mas/: __init__.py  agent.py  mas.py
marft/runner/shared/: coding_runner.py  math_runner.py
marft/scripts/: train_coding.py  train_math.py
marft/scripts/profiles/: code_duo.json  qwen_coding_duo.json
marft/scripts/results/qwen_coding_duo/Qwen2.5-Coder-1.5B-Instruct/bigcodebench/APPO/run_2_agent#2_seed42/: args.yaml
marft/scripts/results/qwen_coding_duo/Qwen2.5-Coder-1.5B-Instruct/bigcodebench/APPO/run_2_agent#2_seed42/logs/: events.out.tfevents.1758174022.odin2
marft/scripts/results/qwen_coding_duo/Qwen2.5-Coder-1.5B-Instruct/bigcodebench/APPO/run_2_agent#2_seed42/logs/wandb/: latest-run
marft/scripts/results/qwen_coding_duo/Qwen2.5-Coder-1.5B-Instruct/bigcodebench/APPO/run_2_agent#2_seed42/logs/wandb/run-20250918_144022-dnb7fb9i/: run-dnb7fb9i.wandb
marft/utils/: logger.py
(+3 files in other folders)
