[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marft"
version = "0.1.0"
description = "Multi-Agent Reinforcement Learning from Human Feedback for Training"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "absl-py",
    "cloudpickle",
    "fairscale",
    "json-repair",
    "peft",
    "pydantic",
    "sentence-transformers",
    "sentencepiece",
    "setproctitle",
    "tensorboard",
    "tensorboardX",
    "numpy==1.26.3",
    "vllm==0.8.5.post1",
    "xformers==0.0.29.post2",
    "latex2sympy2",
    "word2number",
    "pyext",
]

[project.optional-dependencies]
qwen = [
    "torch>=2.0.0",
    "torchvision",
    "torchaudio",
    "transformers",
    "accelerate",
    "datasets",
    "evaluate",
    "tqdm",
    "wandb",
    "deepspeed",
    "trl",
]

[project.scripts]
marft-train = "marft.scripts.train_coding:main"
marft-train-math = "marft.scripts.train_math:main"

[tool.hatch.build.targets.wheel]
packages = ["marft"]
